fixed links to homepage

--- a/html/order.html
+++ b/html/order.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="pies.html">Pies</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -54,7 +54,7 @@
     <footer>
         <nav class="navbar">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="pies.html">Pies</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
