--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="bethany's-pie-shop">Home</a></li>
+                <li><a href="./">Home</a></li>
                 <li><a href="html/pies.html">Pies</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
@@ -38,7 +38,7 @@
     <footer>
         <nav class="navbar">
             <ul>
-                <li><a href="bethany's-pie-shop">Home</a></li>
+                <li><a href="./">Home</a></li>
                 <li><a href="html/pies.html">Pies</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
