--- a/html/pies.html
+++ b/html/pies.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/bethanys-pie-shop">Home</a></li>
                 <li><a href="pies.html">Pies</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -52,7 +52,7 @@
     <footer>
         <nav class="navbar">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/bethanys-pie-shop">Home</a></li>
                 <li><a href="pies.html">Pies</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
